AC_INIT(hildon-fm/hildon-file-system-model.c)
AM_INIT_AUTOMAKE(libhildonfm, 1.9.34)
AM_CONFIG_HEADER(config.h)

AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_AWK
AC_PROG_LIBTOOL
AC_HEADER_STDC

AC_ARG_ENABLE(logging, 
  [  --enable-logging=ARG    none, syslog, stdout, stderr (default=none)],
  [ case "x$enableval" in
      xsyslog) 
	LOGFLAGS="-DDEBUG" ;;
      xstdout) 
	LOGFLAGS="-DDEBUG -DOSSOLOG_STDOUT" ;;
      xstderr) 
	LOGFLAGS="-DDEBUG -DOSSOLOG_STDERR" ;;
      *) 
	LOGFLAGS="" ;;
    esac
  ])

CFLAGS="$CFLAGS -Wall -Wmissing-prototypes -Wmissing-declarations -Wno-format-extra-args $LOGFLAGS"

GTK_VERSION=2.10.0

PKG_CHECK_MODULES(GTK, hildon-1 gtk+-2.0 >= $GTK_VERSION)
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_VERSION)

# Needed to query the paired gateway device

PKG_CHECK_MODULES(GCONF, gconf-2.0 >= 2.6)
AC_SUBST(GCONF_CFLAGS)
AC_SUBST(GCONF_LIBS)

PKG_CHECK_MODULES(HILDON_THUMBNAIL, hildon-thumbnail >= 0.0.4)
AC_SUBST(HILDON_THUMBNAIL_CFLAGS)
AC_SUBST(HILDON_THUMBNAIL_LIBS)

PKG_CHECK_MODULES(GWCONNECT, gwconnect >= 0.58)
AC_SUBST(GWCONNECT_CFLAGS)
AC_SUBST(GWCONNECT_LIBS)

PKG_CHECK_MODULES(LIBOSSOMIME, libhildonmime >= 1.9)
AC_SUBST(LIBOSSOMIME_CFLAGS)
AC_SUBST(LIBOSSOMIME_LIBS)

# Updated required version. Old 0.23.1 is not compatible with 0.23.4
PKG_CHECK_MODULES(DBUSGLIB, dbus-glib-1 >= 0.23.4)
AC_SUBST(DBUSGLIB_CFLAGS)
AC_SUBST(DBUSGLIB_LIBS)

# We need only macros from libosso, not libraries
PKG_CHECK_MODULES(LIBOSSO, libosso >= 0.8.8)
AC_SUBST(LIBOSSO_CFLAGS)

PKG_CHECK_MODULES(MCE, mce >= 0.8.5)
AC_SUBST(MCE_CFLAGS)

PKG_CHECK_MODULES(GNOMEVFS, gnome-vfs-2.0)
AC_SUBST(GNOMEVFS_CFLAGS)
AC_SUBST(GNOMEVFS_LIBS)

##################################################
# Check for gtk-doc.
##################################################
GTK_DOC_CHECK

outomoduledir=${libdir}/outo
AC_SUBST(outomoduledir)


# Disable rebuild of glib-mkenum -generated source code:
AC_ARG_ENABLE(rebuilds, [  --disable-rebuilds      disable all source autogeneration rules],,enable_rebuilds=yes)

# define a MAINT-like variable REBUILD which is set if Perl
# is found, so autogenerated sources can be rebuilt
# Perl is needed by glib-mkenums
AC_CHECK_PROGS(PERL, perl5 perl)

GLIB_MKENUMS=`$PKG_CONFIG --variable=glib_mkenums glib-2.0`
AC_SUBST(GLIB_MKENUMS)

REBUILD=\#
if test "x$enable_rebuilds" = "xyes" && \
     test -n "$PERL" && \
     $PERL -e 'exit !($] >= 5.002)' > /dev/null 2>&1 ; then
  REBUILD=
fi
AC_SUBST(REBUILD)

GETTEXT_PACKAGE="hildon-fm"
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [gettext package name])

AC_CONFIG_FILES([Makefile
		 hildon-fm/Makefile
 	         doc/Makefile
	         hildon-fm-2.pc
	         hildon-fm.pc])

AC_OUTPUT
