AC_INIT(Makefile.am)
AM_INIT_AUTOMAKE(hildon-theme-layout-3, 0.1.0)
AM_CONFIG_HEADER(config.h)

AC_PROG_INSTALL

AC_OUTPUT([Makefile                             \
           scripts/Makefile                     \
	   rc/Makefile                          \
           pkgconfig/hildon-theme-layout-3.pc   \
           pkgconfig/Makefile                   \
           data/Makefile])
