SUBDIRS = src

EXTRA_DIST = debian/changelog				\
	     debian/control				\
             debian/copyright				\
             debian/rules				\
             debian/hildon-thumbnail-libid3.install	\
             debian/hildon-thumbnail-libid3.postinst.in	\
	     debian/hildon-thumbnail-libid3.prerm.in	\
             hildon-thumbnail-libid3.entries

schemadir = @GCONF_SCHEMA_FILE_DIR@
schema_DATA = hildon-thumbnail-libid3.entries
